--- a/versions/version2.html
+++ b/versions/version2.html
@@ -22,7 +22,7 @@
     <main class="container">
         <section class="banner-section">
             <h1>Patron Button/Page Element</h1>
-            <p class="section-description">A prominent, eye-catching Patron button section that immediately captures visitor attention and encourages engagement on a webpage.</p>
+            <p class="section-description">A prominent, eye-catching Patreon button section that immediately captures visitor attention and encourages engagement on a webpage.</p>
             
             <!-- Patron Button Section -->
             <div class="patron-section">
@@ -60,7 +60,7 @@
                     <div class="variation-item">
                         <h3>Gradient Style</h3>
                         <a href="#" class="patron-button gradient-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
@@ -69,7 +69,7 @@
                     <div class="variation-item">
                         <h3>Neon Glow</h3>
                         <a href="#" class="patron-button neon-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
@@ -78,7 +78,7 @@
                     <div class="variation-item">
                         <h3>3D Effect</h3>
                         <a href="#" class="patron-button three-d-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
@@ -87,7 +87,7 @@
                     <div class="variation-item">
                         <h3>Outline Style</h3>
                         <a href="#" class="patron-button outline-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
@@ -96,7 +96,7 @@
                     <div class="variation-item">
                         <h3>Shine Effect</h3>
                         <a href="#" class="patron-button shine-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
@@ -105,7 +105,7 @@
                     <div class="variation-item">
                         <h3>Bounce Effect</h3>
                         <a href="#" class="patron-button bounce-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
@@ -114,7 +114,7 @@
                     <div class="variation-item">
                         <h3>Split Style</h3>
                         <a href="#" class="patron-button split-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
@@ -123,7 +123,7 @@
                     <div class="variation-item">
                         <h3>Border Animation</h3>
                         <a href="#" class="patron-button border-animate-style">
-                            <span class="button-text">Join our Patron</span>
+                            <span class="button-text">Join our Patreon</span>
                             <span class="button-icon">→</span>
                         </a>
                     </div>
