--- a/versions/version2.html
+++ b/versions/version2.html
@@ -13,7 +13,7 @@
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="version1.html">Notification Banners</a></li>
-                <li><a href="version2.html" class="active">Patron Button</a></li>
+                <li><a href="version2.html" class="active">Patreon Button</a></li>
                 <li><a href="version3.html">Popular Now</a></li>
             </ul>
         </div>
