--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="versions/version1.html">Notification Banners</a></li>
-                <li><a href="versions/version2.html">Patron Button</a></li>
+                <li><a href="versions/version2.html">Patreon Button</a></li>
                 <li><a href="versions/version3.html">Popular Now</a></li>
             </ul>
         </div>
