--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <a href="versions/version1.html" class="btn">View</a>
         </div>
             <div class="version-card">
-                <h2>Patron Button</h2>
-                <p>Enhanced patron subscription button with modern styling</p>
+                <h2>Patreon Button</h2>
+                <p>Enhanced Patreon subscription button with modern styling</p>
                 <a href="versions/version2.html" class="btn">View</a>
 </div>
             <div class="version-card">
